--- a/about.html
+++ b/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My blog</title>
+    <title>Rants</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div id="header">
       <div class="container">
-        <a id="header-title" href="index.html">My Blog</a>
+        <a id="header-title" href="index.html">It’s an imperfect World but
+          it’s the only one we got</a>
         <ul id="header-nav">
           <li><a href="about.html">About</a></li>
           <li><a href="mailto:nerdayacki@gmail.com">Contact</a></li>
@@ -22,10 +23,15 @@
           </div> <!-- about-author -->
           <h1 class="about-title">About Me</h3>
           <div class="about-content>">
-            <p>You know who I am.</p>
-            <p>If you like this blog follow me on Twitter and Instagram.
-              If you want to get in touch use the contact link in the
-              navigation bar.</p>
+            <p style="font-size:110%;">You know who I am.</p>
+            <p>
+              You don't know where I am. You will never see me coming.
+              <br>
+              Just some rants from a Law student with a lot of Marvel
+              thrown in the mix. If you like my rambling than check out my
+              other sites.
+            </p>
+            <p>Love, Your Natty</p>
           </div> <!-- about-content -->
         </div> <!-- about -->
       </div> <!-- container -->
@@ -33,16 +39,35 @@
     <div id="footer">
       <div class="container">
         <div class="column">
-          <h4>My Links</h4>
+          <h4>A Link Between
+            <br>Sites</h4>
           <p>
             <a href="https://twitter.com/natty_ts70">Twitter</a>
             <br>
             <a href="https://www.instagram.com/natty_ts70">Instagram</a>
+            <br>
+            <a href="http://natty-ts70.tumblr.com/">Marvel Main Tumblr</a>
+            <br>
+            <a href="https://locus-delicti.tumblr.com/">Aesthetic Tumblr
+               <del>kinda</del></a>
+            <br>
+            <a href="https://natty-gaming.tumblr.com/">Gaming Tumblr</a>
           </p>
         </div> <!-- column -->
         <div class="column">
-          <h4>My Story</h4>
-          <p>You know who I am.</p>
+          <h4>Let's write History</h4>
+          <p>When I look around, you know what I see?
+            <br>
+            Losers.
+            <br>
+            I mean like, folks who have lost stuff.
+            <br>
+            And we have, man, we have, all of us. Homes, and our families, normal lives.
+            <br>
+            And you think life takes more than it gives, but not today. Today it's giving us something.
+            <br>
+            It is giving us a chance.
+          </p>
         </div> <!-- column -->
       </div> <!-- container -->
     </div> <!-- footter -->
