--- a/about.html
+++ b/about.html
@@ -48,8 +48,7 @@
             <br>
             <a href="http://natty-ts70.tumblr.com/">Marvel Main Tumblr</a>
             <br>
-            <a href="https://locus-delicti.tumblr.com/">Aesthetic Tumblr
-               <del>kinda</del></a>
+            <a href="https://locus-delicti.tumblr.com/"><del>kinda</del> Aesthetic Tumblr</a>
             <br>
             <a href="https://natty-gaming.tumblr.com/">Gaming Tumblr</a>
           </p>
